[package]
name = "dino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = { version = "0.11.0", features = [
    "completion",
    "fuzzy-matcher",
    "fuzzy-select",
    "history",
] }
enum_dispatch = "0.3.13"
anyhow = "1.0.86"
askama = "0.12.1"
clap = { version = "4.5.13", features = ["derive"] }
git2 = { version = "0.19.0", default-features = false }
pyo3 = { version = "0.22.2", features = ["auto-initialize"] }
rhai = "1.19.0"
rquickjs = { version = "0.6.2", features = ["full"] }
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
blake3 = "1.5.3"
