[package]
name = "dino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = { version = "0.11.0", features = [
    "completion",
    "fuzzy-matcher",
    "fuzzy-select",
    "history",
] }
enum_dispatch = "0.3.13"
anyhow = "1.0.86"
askama = "0.12.1"
clap = { version = "4.5.13", features = ["derive"] }
git2 = { version = "0.19.0", default-features = false }
pyo3 = { version = "0.22.2", features = ["auto-initialize"] }
rhai = "1.19.0"
rquickjs = { version = "0.6.2", features = ["full-async"] }
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
blake3 = "1.5.3"
glob = "0.3.1"
rquickjs-macro = "0.6.2"
swc_common = { version = "0.37.0", features = ["tty-emitter"] }
swc_atoms = "0.6.7"
lazy_static = "1.5.0"
swc_bundler = "0.234.0"
swc_ecma_codegen = "0.155.0"
url = "2.5.2"
sha = "1.0.3"
regex = "1.10.6"
path-absolutize = "3.1.1"
colored = "2.1.0"
swc_ecma_parser = "0.149.0"
swc_ecma_transforms_base = "0.144.0"
swc_ecma_transforms_typescript = "0.195.0"
swc_ecma_visit = "0.104.0"
ureq = "2.10.0"
assert_fs = "1.1.2"
dirs = "5.0.1"
swc_ecma_ast = "0.118.0"
swc_ecma_loader = "0.49.1"
serde = "1.0.204"
serde_json = "1.0.122"
